feat: 优化接口职责拆分